--- a/docs/stylesheets/firmware_selector.css
+++ b/docs/stylesheets/firmware_selector.css
@@ -5,14 +5,13 @@
 }
 
 .form-container {
-    padding: 24px;
+    padding: 1rem .3rem;
     width: 100%;
 }
 
 nav.progress {
     display: flex;
     justify-content: center;
-    margin-bottom: var(--margin);
 }
 
 .dot {
@@ -40,6 +39,10 @@ nav.progress {
     margin-top: var(--margin);
 }
 
+.choice-btn {
+    padding: .8em 2em
+}
+
 .choice-btn.selected {
     background-color: var(--md-accent-fg-color);
 }
@@ -50,6 +53,13 @@ nav.progress {
 
 .buttons {
     display: flex;
-    margin-top: var(--margin);
     justify-content: space-between;
+}
+
+.next-steps, .md-typeset .grid.next-steps {
+    display: none;
+}
+
+.next-steps.visible, .md-typeset .grid.next-steps.visible {
+    display: block;
 }
